@startuml

package "infrastructure" {
    class Main {

    }
}
package "presentation" {
    class Menu {
      - productService: ProductService
      - materialService: MaterialService
      + startLoop(): void
      # displayMainMenu(): void
      # handleProductMenu(): void
      # handleMaterialMenu(): void
      # handleImpactMenu(): void
      # handleRecyclingMenu(): void
      # handleUserInput(input: String): void
    }
 }
package "application" {
    class ProductService {
      - products: List<Product>
      - materialService: MaterialService
      - calculator: ImpactCalculator
      + createProduct(String ... args): Product
      + fetchProduct(name: String): Product
      + listProducts(): List<Product>
      + recyclingGuidance(p: Product): List<String>
      + calculateImpact(p: Product): double
    }

    class MaterialService {
      - materials: List <Material>
      + createMaterial(String ... args): void
      + fetchMaterial(name: String): Material
      + listMaterials(): List<Material>
    }

    class RecyclingGuidanceService {
      + fetchGuidance(p: Product): List<String>
    }
} 
package "domain" {
    interface ImpactCalculator {
      + calculate(p: Product): double
    }

    class WeightedByLifespanStrategy {
      + calculate(p: Product): double
    }

    class SimpleSumStrategy {
      + calculate(p: Product): double
    }

    class Product{
      - name: String
      - category: String
      - estimatedLifeSpan: Integer
      - materials: List<Material>
      + getMaterials(): List<Material>
      + getName(): String
      + getCategory(): String
      + getEstimatedLifeSpan(): Integer
    }

    class Material{
      - name: String
      - impactValue: double
      - recyclingGuidance: List<String>
      - recyclingCategory: RecyclingCategory
      + getName(): String
      + getImpactValue(): double
      + getRecyclingGuidance(): List<String>
    }



    enum RecyclingCategory {
    PLASTIC
    PAPER
    CRADBOARD
    GLASS
    METAL
    BIO_WASTE
    ELECTRONIC_WASTE
    TEXTILES
    }
}
Menu --> ProductService : calls
Menu --> MaterialService: delegates to

ProductService --> Product : manages
ProductService --> RecyclingGuidanceService : calls
ProductService --> ImpactCalculator : calls
ProductService --> MaterialService : uses

MaterialService --> Material : manages
Material --> RecyclingCategory : has

RecyclingGuidanceService --> Product : fetches
RecyclingGuidanceService ..> RecyclingCategory

ImpactCalculator <|.. SimpleSumStrategy : implements
ImpactCalculator <|.. WeightedByLifespanStrategy 
ImpactCalculator ..> Product : analyzes

Product "*" o-- "*" Material : contains
@enduml